fixing color contrast

--- a/src/public/css/header.less
+++ b/src/public/css/header.less
@@ -10,6 +10,7 @@
       padding:0;
       margin: 0 0 10px 0;
       text-align:center;
+      color:white;
     }
     h1{
       font-size:6vw;
