--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -86,6 +86,7 @@ header h3 {
   padding: 0;
   margin: 0 0 10px 0;
   text-align: center;
+  color: white;
 }
 header h1 {
   font-size: 6vw;
